@@ -40,7 +40,7 @@ Version 1.3.1+svn:
  * terrain system
    * added layer support to the terrain letters, two layers are supported
  * tutorial
-   * increased number of trusn from 20 to 26 in the 2nd scenario
+   * increased number of turns from 20 to 26 in the 2nd scenario
  * WML engine
    * new [own_village] condition to check if someone own a particular village
    * new [store_villages] tag to store village locations
@@ -58,6 +58,7 @@ Version 1.3.1+svn:
  * user interface:
    * new sounds for user interface events
    * added the option to show warnings about deprecated WML usage
+   * added the "ignore all" option to continue observing during massive OOS
  * misceleanous changes and bug fixes
    * an friendly healer hill now stop poisoned unit to lose HP
    * a unit that dies while attacking will now correctly play it's own death
